public/css/style.css
:root {
    --bg-color: rgb(235, 235, 235);
    --text-color: rgb(29, 18, 61);
}

.darkmode {
    --bg-color: rgb(29, 18, 61);
    --text-color: rgb(235, 235, 235);
}

* {
    margin: 0px;
    font-size: 16px;
    font-family: Arial, Helvetica, sans-serif;
}

body {
    background-color: var(--bg-color);
    color: var(--text-color);
}

#allContentWrapper {
    padding: 3rem 5rem;
}

#btnToggleTheme {
    height: 50px;
    width: 50px;
    background-color: var(--text-color);
    display: flex;
    justify-content: center;
    align-items: center;
    position: fixed;
    top: 20px;
    right: 20px;
    border-radius: 50%;
    padding: 0;
}

#btnToggleTheme svg {
    fill: var(--bg-color);
}

#btnToggleTheme svg:last-child {
    display: none;
}

.darkmode #btnToggleTheme svg:first-child {
    display: none;
}

.darkmode #btnToggleTheme svg:last-child {
    display: block;
}

#inputForm {
    border-radius: 1px;
    padding: 10px 0px;
    margin: 5px 0px;
}

#newDeckWrapper {
    display: flex;
    gap: 10px;
    padding: 10px;
}

#btnNewDeck, #btnNewSkillTree {
    background-color: #a1e5a2;
}

#btnNewDeck:hover, #btnNewSkillTree:hover {
    background-color: #9ad29b;
}

#btnShuffleDeck {
    background-color: rgb(219, 219, 156);
}

#btnShuffleDeck:hover {
    background-color: rgb(201, 201, 145);
}

#btnShowDeck, #btnGetSkillTree {
    background-color: rgb(188, 216, 242);
}

#btnShowDeck:hover, #btnGetSkillTree:hover {
    background-color: rgb(169, 196, 222);
}

#btnDrawCard, #btnUnlockSkill {
    background-color: #d9c1e5;
}

#btnDrawCard:hover, #btnUnlockSkill:hover {
    background-color: #cab3d6;
}

#btnDeleteSkill {
    background-color: #f08078;
}

#btnDeleteSkill:hover {
    background-color: #da6d6b;
}

button {
    border: 0.5px solid rgba(0, 0, 0, 0.5);
    padding: 10px;
    margin: 5px 0px;
    border-radius: 5px;
    color: #333;
    box-shadow: 1.5px 1.5px 2px rgba(0, 0, 0, 0.5);
}

button:hover {
    cursor: pointer;
}

button:active {
    transform: scale(0.98);
}

#messageBox {
    border: 1px solid #ccc;
    padding: 9px;
    margin: 5px 0;
    border-radius: 5px;
    color: #333;
    display: none;
    white-space: nowrap;
    align-content: center;
}

#messageBox.success {
    border-color: #4dab50;
    background-color: #dff0d8;
    color: #376a38;
}

#messageBox.error {
    border-color: #f44336;
    background-color: #fddddd;
    color: #a94442;
}

.hidden {
    display: none;
}

#inputSearch {
    padding: 5px 10px;
    display: block;
}

#inputSkillName {
    padding: 5px 5px;
    display: block;
}

.skillTreeBtnWrapper {
    display: flex;
    margin: 5px 0px;
    gap: 15px;
}

#skillTreeElement {
    list-style: none;
    padding: 0;
}

#skillTreeElement ul {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); 
    justify-content: center;
    gap: 5px;
    padding: 20px 0;
    list-style: none;
}

#skillTreeElement li {
    text-align: center;
    padding: 10px;
}

.skillBox {
    padding: 4px 8px;
    border: 1.5px solid #333;
    border-radius: 8px;
    text-align: center;
}

#cardOutput {
    border-radius: 1px;
    padding: 10px;
}

